--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "babel-preset-babili": "0.0.12",
     "babel-preset-env": "^1.4.0",
     "babel-register": "^6.24.1",
-    "babel-template": "^6.24.1"
+    "babel-template": "^6.24.1",
+    "deep-assign": "^2.0.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-babili": "0.0.2"
   }
 }
