--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
   },
   "homepage": "https://github.com/karimsa/babel-preset-mjs-babili#readme",
   "dependencies": {
-    "babel-core": "^6.24.1",
     "babel-preset-babili": "0.0.12",
-    "babel-preset-env": "^1.4.0",
     "babel-register": "^6.24.1",
     "babel-template": "^6.24.1",
     "deep-assign": "^2.0.0",
     "gulp-babel": "^6.1.2",
     "gulp-babili": "0.0.2"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "gulp": "^3.9.1"
   }
 }
